--- a/src/app/shared/shared.bynif.routed/shared.bynif.routed.component.html
+++ b/src/app/shared/shared.bynif.routed/shared.bynif.routed.component.html
@@ -6,10 +6,12 @@
     </h1>
     <h2 class="text-center">
       <i class="bi bi-person-circle"></i>
-      {{ oProveedor.descripcion }} / {{oProveedor.nif}}
+      {{ oProveedor.descripcion }} / {{ oProveedor.nif }}
     </h2>
     <br />
-    <table class="table table-striped table-bordered my-5 text-center proveedor-table">
+    <table
+      class="table table-striped table-bordered my-5 text-center proveedor-table"
+    >
       <tbody>
         <tr>
           <th scope="row">Id</th>
@@ -38,6 +40,7 @@
       </tbody>
     </table>
 
+    <!--
     <div class="mt-5">
       <h2 class="text-center">
         <i class="bi bi-key"></i> Cambiar contraseña
@@ -60,5 +63,8 @@
       </div>
     </div>
     
+  </div>
+</div>
+-->
   </div>
 </div>
