--- a/src/app/shared/shared.recuperarcontrasena.unrouted/shared.recuperarcontrasena.unrouted.component.html
+++ b/src/app/shared/shared.recuperarcontrasena.unrouted/shared.recuperarcontrasena.unrouted.component.html
@@ -19,9 +19,12 @@
         </mat-select>
       </mat-form-field>
 
-      <button mat-flat-button color="primary" type="submit" class="w-100">
+      <button mat-flat-button color="primary" type="submit" class="w-100" [disabled]="isLoading">
         <i class="bi bi-send me-2"></i> Enviar enlace de recuperación
       </button>
+
+      <!-- Circular Loader -->
+      <div *ngIf="isLoading" class="loading-spinner"></div>
 
       <div class="mt-3 text-center" *ngIf="mensaje">
         {{ mensaje }}
