--- a/src/app/shared/shared.restablecercontrasena.unrouted/shared.restablecercontrasena.unrouted.component.html
+++ b/src/app/shared/shared.restablecercontrasena.unrouted/shared.restablecercontrasena.unrouted.component.html
@@ -7,9 +7,17 @@
       <input matInput type="password" formControlName="password" required>
     </mat-form-field>
 
-    <button mat-flat-button color="primary" type="submit" class="w-100">
+    <mat-form-field *ngIf="form.value.emailRequired" appearance="outline" class="w-100 mb-3">
+      <mat-label>Correo electrónico</mat-label>
+      <input matInput type="email" formControlName="email" required>
+    </mat-form-field>
+
+    <button mat-flat-button color="primary" type="submit" class="w-100" [disabled]="isLoading">
       Cambiar contraseña
     </button>
+
+    <!-- Circular Loader -->
+    <div *ngIf="isLoading" class="loading-spinner"></div>
   </form>
 
   <div class="mt-3 text-success" *ngIf="mensaje">{{ mensaje }}</div>
