--- a/src/app/shared/shared.restablecercontrasena.unrouted/shared.restablecercontrasena.unrouted.component.html
+++ b/src/app/shared/shared.restablecercontrasena.unrouted/shared.restablecercontrasena.unrouted.component.html
@@ -20,6 +20,12 @@
     <div *ngIf="isLoading" class="loading-spinner"></div>
   </form>
 
-  <div class="mt-3 text-success" *ngIf="mensaje">{{ mensaje }}</div>
-  <div class="mt-3 text-danger" *ngIf="error">{{ error }}</div>
+  <div *ngIf="mensaje" class="alert alert-success mt-3">
+    {{ mensaje }}
+  </div>
+  
+  <div *ngIf="error" class="alert alert-danger mt-3">
+    {{ error }}
+  </div>
+  
 </div>
