--- a/src/app/shared/shared.recuperarcontrasena.unrouted/shared.recuperarcontrasena.unrouted.component.css
+++ b/src/app/shared/shared.recuperarcontrasena.unrouted/shared.recuperarcontrasena.unrouted.component.css
@@ -65,4 +65,17 @@
       transform: translateY(0);
     }
   }
+  .boton-verde {
+    background-color: #2d572c !important; /* verde oscuro corporativo */
+    color: #ffffff !important;
+    padding: 0.75rem;
+    font-weight: 600;
+    font-size: 1rem;
+    border-radius: 0.5rem;
+    transition: background-color 0.3s ease;
+  }
+  
+  .boton-verde:hover {
+    background-color: #388e3c !important; /* verde más claro al pasar el ratón */
+  }
   
