--- a/src/app/shared/shared.restablecercontrasena.unrouted/shared.restablecercontrasena.unrouted.component.css
+++ b/src/app/shared/shared.restablecercontrasena.unrouted/shared.restablecercontrasena.unrouted.component.css
@@ -73,3 +73,27 @@
     color: #721c24;
   }
   
+
+  .boton-verde {
+    color: white !important;
+    padding: 0.75rem;
+    font-weight: bold;
+    font-size: 1rem;
+    border-radius: 0.5rem;
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
+    background-color: #bdbdbd !important; /* apagado por defecto (cuando está disabled) */
+    cursor: not-allowed;
+  }
+  
+  .boton-verde:not(:disabled) {
+    background-color: #2d572c !important; /* Verde corporativo cuando está activo */
+    cursor: pointer;
+  }
+  
+  .boton-verde:not(:disabled):hover {
+    background-color: #388e3c !important; /* Verde más claro en hover */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+  
+  
